Sync Makefile w/ FreeBSD ports

--- a/net-mgmt/midpoint/Makefile
+++ b/net-mgmt/midpoint/Makefile
@@ -1,5 +1,3 @@
-# $FreeBSD$
-
 PORTNAME=	midpoint
 PORTVERSION=	4.4
 CATEGORIES=	net-mgmt java
@@ -9,17 +7,18 @@ DISTNAME=	${PORTNAME}-${PORTVERSION}-dist
 MAINTAINER=	freebsd@rheinwolf.de
 COMMENT=	Identity management and identity governance system
 
-LICENSE=	APACHE20 CDDL MIT LGPL3 AMS AREV BITSTREAM
-LICENSE_COMB=	multi
-LICENSE_NAME_AMS=	AMSFonts Copyright version 2.2
-LICENSE_NAME_AREV=	Arev Fonts Copyright
-LICENSE_NAME_BITSTREAM=	Bitstream Vera Fonts Copyright
-LICENSE_FILE=	${WRKSRC}/NOTICE
-LICENSE_PERMS_AMS=	dist-mirror dist-sell pkg-mirror pkg-sell auto-accept
-LICENSE_PERMS_AREV=	dist-mirror dist-sell pkg-mirror pkg-sell auto-accept
-LICENSE_PERMS_BITSTREAM=dist-mirror dist-sell pkg-mirror pkg-sell auto-accept
-
-USE_RC_SUBR=	midpoint
+LICENSE=			AMS APACHE20 AREV BITSTREAM CDDL LGPL3 MIT
+LICENSE_COMB=			multi
+LICENSE_NAME_AMS=		AMSFonts Copyright version 2.2
+LICENSE_NAME_AREV=		Arev Fonts Copyright
+LICENSE_NAME_BITSTREAM=		Bitstream Vera Fonts Copyright
+LICENSE_FILE=			${WRKSRC}/NOTICE
+LICENSE_PERMS_AMS=		dist-mirror dist-sell pkg-mirror pkg-sell \
+				auto-accept
+LICENSE_PERMS_AREV=		dist-mirror dist-sell pkg-mirror pkg-sell \
+				auto-accept
+LICENSE_PERMS_BITSTREAM=	dist-mirror dist-sell pkg-mirror pkg-sell \
+				auto-accept
 
 USE_JAVA=	yes
 JAVA_VERSION=	11+
@@ -27,12 +26,16 @@ JAVA_OS=	native
 JAVA_VENDOR=	openjdk oracle
 JAVA_RUN=	yes
 
-SUB_LIST+=	PORTNAME=${PORTNAME} USERS=${USERS} GROUPS=${GROUPS} JAVA=${JAVA}
+USE_RC_SUBR=	midpoint
+
+NO_ARCH=	yes
+NO_BUILD=	yes
+SUB_LIST+=	GROUPS=${GROUPS} \
+		JAVA=${JAVA} \
+		PORTNAME=${PORTNAME} \
+		USERS=${USERS}
 
 WRKSRC=		${WRKDIR}/${PORTNAME}-${PORTVERSION}
-
-NO_BUILD=	yes
-NO_ARCH=	yes
 
 USERS=		midpoint
 GROUPS=		midpoint
